k8s-configs/ss-db.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: db
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-selector
  template:
    metadata:
      labels:
        app: db-selector
    spec:
      containers:
        - name: postgres-containers
          image: bitnami/postgresql:15
          ports:
            - name: tcp-postgres
              containerPort: 5432
          volumeMounts:
            - name: db-init-volume
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: db-init-volume
          configMap:
            name: db-init-config
