k8s-configs/svc-archive-manager.yaml
kind: Service
apiVersion: v1
metadata:
  name: archive-manager-service
spec:
  selector:
    app: archive-manager
  ports:
    - name: am-svc-port
      protocol: TCP
      port: 30241
      targetPort: app-am-port
