k8s-configs/svc-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: db
spec:
  selector:
    app: db-selector
  ports:
    - name: am-postgres
      protocol: TCP
      port: 30242
      targetPort: am-tcp-postgres
