k8s-configs/all.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: db
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-selector
  template:
    metadata:
      labels:
        app: db-selector
    spec:
      containers:
        - name: postgres-containers
          image: bitnami/postgresql:15
          ports:
            - name: tcp-postgres
              containerPort: 5432
          volumeMounts:
            - name: db-init-volume
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: db-init-volume
          configMap:
            name: db-init-config
---
kind: Service
apiVersion: v1
metadata:
  name: db
spec:
  selector:
    app: db-selector
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: tcp-postgres
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: archive-manager
  labels:
    app: archive-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archive-manager
  template:
    metadata:
      labels:
        app: archive-manager
    spec:
      containers:
        - name: archive-manager-cont
          image: pazas/archive-manager:1.0.4
          ports:
            - name: app-port
              containerPort: 30241
          volumeMounts:
            - name: archive-manager-config-volume
              mountPath: /app/config/
      volumes:
        - name: archive-manager-config-volume
          configMap:
            name: archive-manager-config
---
kind: Service
apiVersion: v1
metadata:
  name: archive-manager-service
spec:
  selector:
    app: archive-manager
  ports:
    - name: am-svc-port
      protocol: TCP
      port: 30241
      targetPort: am-port
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: archive-manager-ingress
  labels:
    app: archive-manager-ingress
spec:
  rules:
    - host: sbercode-daa5fdcc-1e12-40ad-9d86-2145267f434c-work.apps.sbc-okd.pcbltools.ru
      http:
        paths:
          - path: /api/v1/archive-manager
            pathType: Prefix
            backend:
              service:
                name: archive-manager-service
                port:
                  name: am-svc-port
