k8s-configs/ingress-archive-manager.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: archive-manager-ingress
  labels:
    app: archive-manager-ingress
spec:
  rules:
    - host: sbercode-b9773d51-c0f3-4843-a79c-1f26a46d2393-work.apps.sbc-okd.pcbltools.ru
      http:
        paths:
          - path: /api/v1/archive-manager
            pathType: Prefix
            backend:
              service:
                name: archive-manager-service
                port:
                  name: am-svc-port
